# mantrachain-rust

./: .gitmodules  Cargo.toml  README.md  justfile
scripts/: update-and-rebuild.sh
