[workspace]
members  = ["packages/*"]
resolver = "2"

[workspace.package]
authors = [
  "MANTRA Engineering Team <tech@mantrachain.io>",
  "Javier C <javier.m.costa@mantra.finance",
]
edition = "2021"
homepage = "https://mantra.zone"
license = "MPL-2.0"
repository = "https://github.com/MANTRA-Chain/mantrachain-rust"

[workspace.dependencies]
mantra-dex-std = { version = "2.1.5" }

anybuf             = { version = "0.5.2" }
anyhow             = { version = "1.0.95" }
chrono             = { version = "0.4.27", default-features = false }
cosmwasm-schema    = { version = "2.2.0" }
cosmwasm-std       = { version = "2.2.0", default-features = true, features = ["cosmwasm_2_2", "stargate"] }
cw-multi-test      = { version = "2.2.0", features = ["cosmwasm_2_0", "staking", "stargate"] }
cw-ownable         = { version = "2.1.0" }
cw-storage-plus    = { version = "2.0.0" }
heck               = { version = "0.4.0" }
itertools          = { version = "0.10.3" }
log                = { version = "0.4.17" }
osmosis-std        = { version = "0.27.0" }
neutron-std-derive = { git = "https://github.com/neutron-org/neutron-std", rev = "v5.1.2" }
pretty_env_logger  = { version = "0.4.0" }
prettyplease       = { version = "0.1.16" }
proc-macro2        = { version = "1.0.52" }
prost              = { version = "0.13.3", default-features = false, features = ["prost-derive"] }
prost-build        = { version = "0.13.3" }
prost-types        = { version = "0.13.3", default-features = false }
protobuf           = { version = "3.3.0" }
quote              = { version = "1.0.26" }
regex              = { version = "1" }
schemars           = { version = "0.8.21" }
serde              = { version = "1.0.217", default-features = false, features = ["derive"] }
serde-cw-value     = { version = "0.7.0" }
serde-json-wasm    = { version = "1.0.0" }
serde-protobuf     = { version = "0.8.2" }
syn                = { version = "1.0.98", features = ["full", "parsing", "extra-traits"] }
test-case          = { version = "3.3.1" }
tonic              = { version = "0.7" }
tonic-build        = { version = "0.7" }
uint               = { version = "0.10.0" }
walkdir            = { version = "2" }


[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
